force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Gobs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Gobs__c</fullName>
    <description>Planning field</description>
    <label>Number of Gobs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>