force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Pallet_Dressing_Needed_Kg__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pallet_Dressing_Needed_Kg__c</fullName>
    <description>Planning field</description>
    <label>Number of Pallet Dressing Needed (Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>