force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Pallets_per_Load__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pallets_per_Load__c</fullName>
    <description>Planning field</description>
    <label>Number of Pallets per Load</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>