force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Runs_per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Runs_per_Annum__c</fullName>
    <description>Planning field</description>
    <label>Number of Runs per Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>