force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Sections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sections__c</fullName>
    <description>Planning field</description>
    <label>Number of Sections</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>