force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Strapping_Needed_Metres__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Strapping_Needed_Metres__c</fullName>
    <description>Planning field</description>
    <label>Number of Strapping Needed (Metres)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>