force-app/main/default/objects/Pricing_Model__c/fields/Pack_Spec_Attached__c.field-meta.xml
<CustomField>
    <fullName>Pack_Spec_Attached__c</fullName>
    <label>Pack Spec Attached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>