force-app/main/default/objects/Pricing_Model__c/fields/Pack_Spec_Title__c.field-meta.xml
<CustomField>
    <fullName>Pack_Spec_Title__c</fullName>
    <description>Planning field</description>
    <label>Pack Spec Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>