force-app/main/default/objects/Pricing_Model__c/fields/Pallet_Height__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Height__c</fullName>
    <description>Sales field</description>
    <label>Pallet Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Tall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>