force-app/main/default/objects/Pricing_Model__c/fields/Pallet_Pad__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Pad__c</fullName>
    <description>Planning field</description>
    <label>Base Pad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPP10</fullName>
            </value>
            <value>
                <fullName>PPP05</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>