force-app/main/default/objects/Pricing_Model__c/fields/Pallet_Pad_Number_Needed__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Pad_Number_Needed__c</fullName>
    <description>Planning field</description>
    <label>Pallet Pad Number Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>