force-app/main/default/objects/Pricing_Model__c/fields/Pallet_Type_Planning__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Type_Planning__c</fullName>
    <description>Planning field</description>
    <label>Pallet Type (Planning)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPT04 - Blue Pallet</fullName>
            </value>
            <value>
                <fullName>PPT12 - EQ</fullName>
            </value>
            <value>
                <fullName>PPT17 - Heat Treated</fullName>
            </value>
            <value>
                <fullName>PPT29 - Red Pallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>