force-app/main/default/objects/Pricing_Model__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>Design field</description>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>NNPB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>