force-app/main/default/objects/Pricing_Model__c/fields/Process_Message__c.field-meta.xml
<CustomField>
    <fullName>Process_Message__c</fullName>
    <formula>IF (TEXT(Process__c) = &quot;PB&quot;,
    IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;Warning&quot;)&amp;&quot;   As process is &apos;PB&apos; need to incorporate plunger in the capital cost.&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Message</label>
    <type>Text</type>
</CustomField>