force-app/main/default/objects/Pricing_Model__c/fields/Proportion_of_Moulds_to_be_Paid_by_Custo__c.field-meta.xml
<CustomField>
    <fullName>Proportion_of_Moulds_to_be_Paid_by_Custo__c</fullName>
    <description>Sales field</description>
    <label>% of Moulds to be Paid by Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>