force-app/main/default/objects/Pricing_Model__c/fields/Proposed_price_per_THS__c.field-meta.xml
<CustomField>
    <fullName>Proposed_price_per_THS__c</fullName>
    <description>Sales field</description>
    <label>Proposed price per THS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>