force-app/main/default/objects/Pricing_Model__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Pricing Model is related to a specific Opportunity please reference it here</description>
    <inlineHelpText>If this Pricing Model is related to a specific Opportunity please reference it here</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Models</relationshipLabel>
    <relationshipName>Pricing_Models</relationshipName>
    <type>Lookup</type>
</CustomField>