force-app/main/default/objects/Pricing_Model__c/fields/Sales_volume_per_annum_000s_bottles__c.field-meta.xml
<CustomField>
    <fullName>Sales_volume_per_annum_000s_bottles__c</fullName>
    <description>Sales field</description>
    <label>Sales volume per annum (&apos;000s bottles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>