force-app/main/default/objects/Pricing_Model__c/fields/Shape__c.field-meta.xml
<CustomField>
    <fullName>Shape__c</fullName>
    <description>Sales field</description>
    <label>Shape</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flask (Concave)</fullName>
            </value>
            <value>
                <fullName>Flask (Oval)</fullName>
            </value>
            <value>
                <fullName>Squares</fullName>
            </value>
            <value>
                <fullName>Rounds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>