force-app/main/default/objects/Pricing_Model__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Sales</fullName>
                <default>true</default>
                <label>1 Sales</label>
            </value>
            <value>
                <fullName>2 Planning</fullName>
            </value>
            <value>
                <fullName>3 Design</fullName>
            </value>
            <value>
                <fullName>4 Distribution</fullName>
            </value>
            <value>
                <fullName>5 Finance</fullName>
            </value>
            <value>
                <fullName>6 Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>