force-app/main/default/objects/Pricing_Model__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <formula>CASE( Status__c ,

&quot;1 Sales&quot;, IMAGE(&quot;/resource/PricingModel_1&quot;,&quot;Sales&quot;),
&quot;2 Planning&quot;, IMAGE(&quot;/resource/PricingModel_2&quot;,&quot;Planning&quot;),
&quot;3 Design&quot;, IMAGE(&quot;/resource/PricingModel_3&quot;,&quot;Design&quot;),
&quot;4 Distribution&quot;, IMAGE(&quot;/resource/PricingModel_4&quot;,&quot;Distribution&quot;),
&quot;5 Finance&quot;, IMAGE(&quot;/resource/PricingModel_5&quot;,&quot;Finance&quot;),
IMAGE(&quot;/resource/PricingModel_6&quot;,&quot;Done&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline</label>
    <type>Text</type>
</CustomField>