force-app/main/default/objects/Pricing_Model__c/fields/Top_Frames__c.field-meta.xml
<CustomField>
    <fullName>Top_Frames__c</fullName>
    <description>Sales field</description>
    <label>Top Frames</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>