force-app/main/default/objects/Pricing_Model__c/fields/Top_Frames_Planning__c.field-meta.xml
<CustomField>
    <fullName>Top_Frames_Planning__c</fullName>
    <description>Planning field</description>
    <label>Top Frames (Planning)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>PPT22</fullName>
            </value>
            <value>
                <fullName>PPT25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>