force-app/main/default/objects/Pricing_Model__c/fields/Top_Frames_Planning_Number_Needed__c.field-meta.xml
<CustomField>
    <fullName>Top_Frames_Planning_Number_Needed__c</fullName>
    <description>Planning field</description>
    <label>Top Frames (Planning) Number Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>