force-app/main/default/objects/Pricing_Model__c/fields/Trial_Details__c.field-meta.xml
<CustomField>
    <fullName>Trial_Details__c</fullName>
    <description>Planning field</description>
    <label>Trial Details</label>
    <type>TextArea</type>
</CustomField>