force-app/main/default/objects/Pricing_Model__c/fields/Years_per_contract__c.field-meta.xml
<CustomField>
    <fullName>Years_per_contract__c</fullName>
    <description>Sales field</description>
    <label>Years per contract</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>