force-app/main/default/objects/Pricing_Model__c/recordTypes/x1Sales.recordType-meta.xml
<RecordType>
    <fullName>x1Sales</fullName>
    <active>true</active>
    <label>1 Sales</label>
</RecordType>