force-app/main/default/objects/Pricing_Model__c/recordTypes/x2Planning.recordType-meta.xml
<RecordType>
    <fullName>x2Planning</fullName>
    <active>true</active>
    <label>2 Planning</label>
</RecordType>