force-app/main/default/objects/Pricing_Model__c/recordTypes/x3Design.recordType-meta.xml
<RecordType>
    <fullName>x3Design</fullName>
    <active>true</active>
    <label>3 Design</label>
</RecordType>