force-app/main/default/objects/Pricing_Model__c/recordTypes/x4Distribution.recordType-meta.xml
<RecordType>
    <fullName>x4Distribution</fullName>
    <active>true</active>
    <label>4 Distribution</label>
</RecordType>