force-app/main/default/objects/Pricing_Model__c/recordTypes/X5_Finance.recordType-meta.xml
<RecordType>
    <fullName>X5_Finance</fullName>
    <active>true</active>
    <label>5 Finance</label>
</RecordType>