force-app/main/default/objects/Pricing_Model__c/recordTypes/x6_Completed.recordType-meta.xml
<RecordType>
    <fullName>x6_Completed</fullName>
    <active>true</active>
    <label>6 Completed</label>
</RecordType>