force-app/main/default/objects/Pricing_Model__c/validationRules/Additional_Production_Staff_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Production_Staff_Required</fullName>
    <active>true</active>
    <description>If the bottle shape (field = &quot;Shape__c&quot;) is anything other than round the user must enter further details in the &quot;Additional_Production_Staff_Required__c&quot; field</description>
    <errorConditionFormula>NOT(ISPICKVAL(Shape__c , &quot;Rounds&quot;)) 

&amp;&amp; 

ISBLANK( Additional_Production_Staff_Required__c  )</errorConditionFormula>
    <errorDisplayField>Additional_Production_Staff_Required__c</errorDisplayField>
    <errorMessage>If the bottle shape is anything other than &quot;Round&quot; you must provide details of the additional production staff that will be required</errorMessage>
</ValidationRule>