force-app/main/default/objects/Pricing_Model__c/validationRules/Max_Pallet_Height.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Pallet_Height</fullName>
    <active>true</active>
    <description>When &quot;Yes&quot; is selected in the &quot;Customer_has_Max_Pallet_Height__c&quot; field the user must provide additional commentary in the &quot;Max_Pallet_Height__c&quot;  field.</description>
    <errorConditionFormula>ISPICKVAL(Customer_has_Max_Pallet_Height__c , &quot;Yes&quot;)

&amp;&amp;

ISBLANK( Max_Pallet_Height__c )</errorConditionFormula>
    <errorDisplayField>Max_Pallet_Height__c</errorDisplayField>
    <errorMessage>If the Customer has a max pallet height you must specify it here</errorMessage>
</ValidationRule>