force-app/main/default/objects/Pricing_Model__c/validationRules/New_Delivery_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Delivery_Location</fullName>
    <active>true</active>
    <description>When &quot;Other&quot; is selected in the &quot;Delivery_Location__c&quot; field the user must provide a new delivery location in the  &quot;New_Location__c&quot;  field.</description>
    <errorConditionFormula>ISPICKVAL(Delivery_Location__c , &quot;Other&quot;)

&amp;&amp;

ISBLANK(  New_Location__c  )</errorConditionFormula>
    <errorDisplayField>New_Location__c</errorDisplayField>
    <errorMessage>If you selected &quot;Other&quot; as the Delivery Location, you must specify a new location here</errorMessage>
</ValidationRule>