force-app/main/default/objects/Pricing_Model__c/validationRules/Why_No_Pack_Spec.validationRule-meta.xml
<ValidationRule>
    <fullName>Why_No_Pack_Spec</fullName>
    <active>true</active>
    <description>When &quot;No&quot; is selected in the &quot;Pack_Spec_Attached__c&quot; field the user must provide a reason in the &quot;If_No_Pack_Spec_Why_Not__c &quot; field</description>
    <errorConditionFormula>ISPICKVAL(Pack_Spec_Attached__c , &quot;No&quot;)

&amp;&amp;

ISBLANK( If_No_Pack_Spec_Why_Not__c)</errorConditionFormula>
    <errorDisplayField>If_No_Pack_Spec_Why_Not__c</errorDisplayField>
    <errorMessage>If you are not intending to attach a Pack Spec you must provide a reason</errorMessage>
</ValidationRule>