force-app/main/default/objects/Pricing_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Is_a_Trial_Needed__c</columns>
    <columns>General_Sale_Item__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Sales_Require_a_Response__c</columns>
    <columns>Date_Customer_Requires_the_Bottles__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pricing Models</label>
</ListView>