force-app/main/default/objects/Pricing_Model__c/listViews/Status_Design.listView-meta.xml
<ListView>
    <fullName>Status_Design</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>3 Design</value>
    </filters>
    <label>Status - 3 Design</label>
</ListView>