force-app/main/default/objects/Pricing_Model__c/listViews/Status_Distribution.listView-meta.xml
<ListView>
    <fullName>Status_Distribution</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>4 Distribution</value>
    </filters>
    <label>Status - 4 Distribution</label>
</ListView>