force-app/main/default/objects/Pricing_Model__c/listViews/Status_Done.listView-meta.xml
<ListView>
    <fullName>Status_Done</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>6 Done</value>
    </filters>
    <label>Status - 6 Done</label>
</ListView>