force-app/main/default/objects/Pricing_Model__c/listViews/Status_Finance.listView-meta.xml
<ListView>
    <fullName>Status_Finance</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>5 Finance</value>
    </filters>
    <label>Status - 5 Finance</label>
</ListView>