force-app/main/default/objects/Pricing_Model__c/listViews/Status_Planning.listView-meta.xml
<ListView>
    <fullName>Status_Planning</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date_Submitted_by_Sales__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>2 Planning</value>
    </filters>
    <label>Status - 2 Planning</label>
</ListView>