force-app/main/default/objects/Pricing_Model__c/listViews/Status_Sales.listView-meta.xml
<ListView>
    <fullName>Status_Sales</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>1 Sales</value>
    </filters>
    <label>Status - 1 Sales</label>
</ListView>